<?xml version="1.0"?>
<package format="2">
  <name>rm_vt</name>
  <version>0.0.0</version>
  <description>The rm_vt package</description>

  <license>BSD</license>
  <maintainer email="3631676002@qq.com">ch</maintainer>
  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- depend: build, export, and execution dependency -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rm_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib</depend>
  <depend>rm_common</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>serial</depend>
</package>
